Fix page alignment

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ bottom:75px;
 
 
 main{
-  padding:10em;
+  padding:7em;
   font-size: 20px;
   padding-bottom:3em;
 
@@ -176,7 +176,7 @@ main{
 #work h1{
  border-bottom: 4px solid rgb(240, 81, 69);
  margin-bottom: 25px;
- width:120%;
+ width:107%;
 }
 
 .grid-container {
@@ -186,7 +186,7 @@ main{
   grid-template-rows: 300px 300px;
   background-color: #2196F3;
   padding: 10px;
-  width:120%;
+  width:107%;
   height:700px;
 }
 
@@ -205,7 +205,7 @@ main{
 #about{
   padding-top:2em;
   justify-content: space-around;
-  width:120%;
+  width:107%;
   min-height:650px;
   margin-bottom:50px;
 }
@@ -240,7 +240,7 @@ margin-bottom:0px;
 #skills h1{
  border-bottom: 4px solid rgb(240, 81, 69);
  margin-bottom:50px;
- width:120%;
+ width:107%;
 }
 
 
@@ -248,7 +248,7 @@ margin-bottom:0px;
   #skills .skill-bars{
       padding: 2em;
       margin: 0;
-      width:120%;
+      width:107%;
       
       background-color: rgb(131, 185, 178);
   
@@ -298,7 +298,7 @@ margin-bottom:0px;
 /*** FOOTER ***/
 
 #footer {
-  width:120%;
+  width:125%;
   height:100%;
   background-color: rgb(248, 168, 77);
   padding:3em;
@@ -313,8 +313,8 @@ margin-bottom:0px;
 
 display: flex;
 flex-direction: column;
-flex-wrap:wrap;
 position: relative;
+right:70px;
 
 }
 
